wrapped intro.css in ID intro-id to fix toggle bug.

--- a/examples/site/stylesheets/scss/_intro.scss
+++ b/examples/site/stylesheets/scss/_intro.scss
@@ -1,94 +1,95 @@
-body#index_page {}
+body#index_page {
 
-#blurb {
-  text-align: center;
-  #headline {
-    font-size: 50px; }
-  #subline {
-    font-style: italic; } }
+  #blurb {
+    text-align: center;
+    #headline {
+      font-size: 50px; }
+    #subline {
+      font-style: italic; } }
 
-.example {
-  border: 2px solid black;
-  padding: 10px;
-  margin: 5px; }
-
-.demonstration {
-  margin: 5px;
-  padding: 10px; }
-
-.explanation {
-  margin: 5px;
-  margin-left: 330px;
-  padding: 5px;
-  width: 500px;
-  border: 1px solid black;
-  .code {
-    border: 1px solid gray;
-    border-width: 1px 1px 4px 6px;
+  .example {
+    border: 2px solid black;
     padding: 10px;
-    background: #cdcdcd; } }
+    margin: 5px; }
 
-// Toggler Styling
-
-[data-ur-set="toggler"] {
-  background: #fafafa;
-  color: black;
-  padding: 5px;
-  border: 1px solid black;
-  p {
-    margin: 0em; }
-  [data-ur-toggler-component="button"] {
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    background: #ffd700 url("resources/largeshade.png") no-repeat left bottom;
-    color: black;
+  .demonstration {
     margin: 5px;
-    padding: 5px; }
-  [data-ur-toggler-component='content'] {
-    display: none;
-    &[data-ur-state='enabled'] {
+    padding: 10px; }
+
+  .explanation {
+    margin: 5px;
+    margin-left: 330px;
+    padding: 5px;
+    width: 500px;
+    border: 1px solid black;
+    .code {
+      border: 1px solid gray;
+      border-width: 1px 1px 4px 6px;
+      padding: 10px;
+      background: #cdcdcd; } }
+
+  // Toggler Styling
+
+  [data-ur-set="toggler"] {
+    background: #fafafa;
+    color: black;
+    padding: 5px;
+    border: 1px solid black;
+    p {
+      margin: 0em; }
+    [data-ur-toggler-component="button"] {
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       border-radius: 5px;
-      display: block;
-      margin: 5px;
-      padding: 5px;
       background: #ffd700 url("resources/largeshade.png") no-repeat left bottom;
       color: black;
-      li {
+      margin: 5px;
+      padding: 5px; }
+    [data-ur-toggler-component='content'] {
+      display: none;
+      &[data-ur-state='enabled'] {
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        display: block;
+        margin: 5px;
+        padding: 5px;
+        background: #ffd700 url("resources/largeshade.png") no-repeat left bottom;
         color: black;
-        margin-left: 50px; } } } }
+        li {
+          color: black;
+          margin-left: 50px; } } } }
 
-// Select-List Styling
+  // Select-List Styling
 
-#exselectlist {
-  border: 1px solid black;
-  background: #fafafa;
-  color: black;
-  padding: 5px;
-  [data-ur-state='enabled'] {
-    background: #ffd700 url("resources/largeshade.png") no-repeat left bottom; } }
+  #exselectlist {
+    border: 1px solid black;
+    background: #fafafa;
+    color: black;
+    padding: 5px;
+    [data-ur-state='enabled'] {
+      background: #ffd700 url("resources/largeshade.png") no-repeat left bottom; } }
 
-// Carousel Styling
+  // Carousel Styling
 
-#excarousel [data-ur-set="carousel"] {
-  [data-ur-carousel-component="view_container"] {
-    overflow-x: hidden;
-  }
-  [data-ur-carousel-component="scroll_container"] {
-    margin: auto;
-    overflow: hidden;
-    position: relative;
-    width: 100px;
-    height: 100px;
-    img {
-      float: left;
+  #excarousel [data-ur-set="carousel"] {
+    [data-ur-carousel-component="view_container"] {
+      overflow-x: hidden;
+    }
+    [data-ur-carousel-component="scroll_container"] {
+      margin: auto;
+      overflow: hidden;
+      position: relative;
       width: 100px;
       height: 100px;
+      img {
+        float: left;
+        width: 100px;
+        height: 100px;
+      }
     }
-  }
-  [data-ur-carousel-component="button"][data-ur-state="disabled"] {
-    opacity: 0.3;
+    [data-ur-carousel-component="button"][data-ur-state="disabled"] {
+      opacity: 0.3;
+    }
   }
 }
